src/tests/snapshots/amber__tests__translating__add_num_shorthand.ab.snap
---
source: src/tests/translating.rs
expression: ast
---
Block(
    BlockFragment {
        statements: [
            VarStmt(
                VarStmtFragment {
                    name: "x",
                    global_id: Some(
                        0,
                    ),
                    index: None,
                    kind: Num,
                    is_ephemeral: false,
                    is_ref: false,
                    is_local: false,
                    is_array_ref: false,
                    optimize_unused: true,
                    operator: "=",
                    value: Raw(
                        RawFragment {
                            value: "10.5",
                        },
                    ),
                },
            ),
            VarStmt(
                VarStmtFragment {
                    name: "x",
                    global_id: Some(
                        0,
                    ),
                    index: None,
                    kind: Num,
                    is_ephemeral: false,
                    is_ref: false,
                    is_local: false,
                    is_array_ref: false,
                    optimize_unused: true,
                    operator: "=",
                    value: Subprocess(
                        SubprocessFragment {
                            fragment: List(
                                ListFragment {
                                    values: [
                                        Raw(
                                            RawFragment {
                                                value: "bc ",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "-l",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " <<< ",
                                            },
                                        ),
                                        VarExpr(
                                            VarExprFragment {
                                                name: "x",
                                                global_id: Some(
                                                    0,
                                                ),
                                                kind: Num,
                                                is_ref: false,
                                                is_length: false,
                                                default_value: None,
                                                is_quoted: true,
                                                is_array_to_string: false,
                                                is_declared: true,
                                                is_math_var: false,
                                                render_type: BashValue,
                                                index: None,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "'+'",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "5.2",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " | sed '",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "/\\./ s/\\.\\{0,1\\}0\\{1,\\}$//",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "'",
                                            },
                                        ),
                                    ],
                                    separator: Empty,
                                },
                            ),
                            quoted: true,
                        },
                    ),
                },
            ),
            VarStmt(
                VarStmtFragment {
                    name: "y",
                    global_id: Some(
                        1,
                    ),
                    index: None,
                    kind: Num,
                    is_ephemeral: false,
                    is_ref: false,
                    is_local: false,
                    is_array_ref: false,
                    optimize_unused: true,
                    operator: "=",
                    value: Raw(
                        RawFragment {
                            value: "20.1",
                        },
                    ),
                },
            ),
            VarStmt(
                VarStmtFragment {
                    name: "y",
                    global_id: Some(
                        1,
                    ),
                    index: None,
                    kind: Num,
                    is_ephemeral: false,
                    is_ref: false,
                    is_local: false,
                    is_array_ref: false,
                    optimize_unused: true,
                    operator: "=",
                    value: Subprocess(
                        SubprocessFragment {
                            fragment: List(
                                ListFragment {
                                    values: [
                                        Raw(
                                            RawFragment {
                                                value: "bc ",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "-l",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " <<< ",
                                            },
                                        ),
                                        VarExpr(
                                            VarExprFragment {
                                                name: "y",
                                                global_id: Some(
                                                    1,
                                                ),
                                                kind: Num,
                                                is_ref: false,
                                                is_length: false,
                                                default_value: None,
                                                is_quoted: true,
                                                is_array_to_string: false,
                                                is_declared: true,
                                                is_math_var: false,
                                                render_type: BashValue,
                                                index: None,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "'+'",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "15.7",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " | sed '",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "/\\./ s/\\.\\{0,1\\}0\\{1,\\}$//",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "'",
                                            },
                                        ),
                                    ],
                                    separator: Empty,
                                },
                            ),
                            quoted: true,
                        },
                    ),
                },
            ),
        ],
        increase_indent: true,
        needs_noop: false,
        is_conditional: false,
    },
)
