src/tests/snapshots/amber__tests__translating__div_int_expression.ab.snap
---
source: src/tests/translating.rs
assertion_line: 31
expression: ast
---
Block(
    BlockFragment {
        statements: [
            List(
                ListFragment {
                    values: [
                        Raw(
                            RawFragment {
                                value: "printf '%s\\n' ",
                            },
                        ),
                        Arithmetic(
                            ArithmeticFragment {
                                left: Some(
                                    Raw(
                                        RawFragment {
                                            value: "10",
                                        },
                                    ),
                                ),
                                right: Some(
                                    Raw(
                                        RawFragment {
                                            value: "2",
                                        },
                                    ),
                                ),
                                op: Div,
                                quoted: true,
                            },
                        ),
                    ],
                    separator: Empty,
                },
            ),
            List(
                ListFragment {
                    values: [
                        Raw(
                            RawFragment {
                                value: "printf '%s\\n' ",
                            },
                        ),
                        Arithmetic(
                            ArithmeticFragment {
                                left: Some(
                                    Arithmetic(
                                        ArithmeticFragment {
                                            left: Some(
                                                Raw(
                                                    RawFragment {
                                                        value: "20",
                                                    },
                                                ),
                                            ),
                                            right: Some(
                                                Raw(
                                                    RawFragment {
                                                        value: "4",
                                                    },
                                                ),
                                            ),
                                            op: Div,
                                            quoted: true,
                                        },
                                    ),
                                ),
                                right: Some(
                                    Raw(
                                        RawFragment {
                                            value: "2",
                                        },
                                    ),
                                ),
                                op: Div,
                                quoted: true,
                            },
                        ),
                    ],
                    separator: Empty,
                },
            ),
            List(
                ListFragment {
                    values: [
                        Raw(
                            RawFragment {
                                value: "printf '%s\\n' ",
                            },
                        ),
                        Arithmetic(
                            ArithmeticFragment {
                                left: Some(
                                    Arithmetic(
                                        ArithmeticFragment {
                                            left: Some(
                                                Arithmetic(
                                                    ArithmeticFragment {
                                                        left: Some(
                                                            Raw(
                                                                RawFragment {
                                                                    value: "100",
                                                                },
                                                            ),
                                                        ),
                                                        right: Some(
                                                            Raw(
                                                                RawFragment {
                                                                    value: "5",
                                                                },
                                                            ),
                                                        ),
                                                        op: Div,
                                                        quoted: true,
                                                    },
                                                ),
                                            ),
                                            right: Some(
                                                Raw(
                                                    RawFragment {
                                                        value: "2",
                                                    },
                                                ),
                                            ),
                                            op: Div,
                                            quoted: true,
                                        },
                                    ),
                                ),
                                right: Some(
                                    Raw(
                                        RawFragment {
                                            value: "2",
                                        },
                                    ),
                                ),
                                op: Div,
                                quoted: true,
                            },
                        ),
                    ],
                    separator: Empty,
                },
            ),
        ],
        increase_indent: true,
        needs_noop: false,
        is_conditional: false,
    },
)
